--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -16,11 +16,9 @@
 
 <body class="bg-gray-50 min-h-screen">
     <div id="app">
-        <svg class="loading-progress">
-            <circle r="40%" cx="50%" cy="50%" />
-            <circle r="40%" cx="50%" cy="50%" />
-        </svg>
-        <div class="loading-progress-text"></div>
+        <div class="loading-progress">
+            <div class="loader"></div>
+        </div>
     </div>
 
     <div id="blazor-error-ui">
