--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -41,7 +41,7 @@
         window.dataLayer = window.dataLayer || [];
         function gtag(){dataLayer.push(arguments);}
         gtag('js', new Date());
-        gtag('config', 'GA_TRACKING_ID');
+        gtag('config', 'G-LMCFJ7SKM4');
     </script>
     <script data-name="BMC-Widget" data-cfasync="false" src="https://cdnjs.buymeacoffee.com/1.0.0/widget.prod.min.js" data-id="goforgoldman" data-description="Support me on Buy me a coffee!" data-message="Hope you're enjoying my content! 😊" data-color="#FF813F" data-position="Right" data-x_margin="18" data-y_margin="18"></script>
 </body>
