--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -12,6 +12,11 @@
     <link rel="icon" type="image/png" href="favicon.png" />
     <link href="GoForGoldman.styles.css" rel="stylesheet" />
     <link rel="stylesheet" href="css/lib/prism.css" />
+    <link rel="alternate" 
+      type="application/rss+xml" 
+      title="GoForGoldman site feed" 
+      href="/feed.xml" />
+
 </head>
 
 <body class="bg-gray-50 min-h-screen">
